# PosePals

./: .gitignore  README.md  prepare_libs.bash  settings.gradle  settings.gradle.kts
.github/workflows/: node.js.yml
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/example/competitive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/assets/ui/: index.html
app/src/main/assets/ui/assets/: index-3eb977ac.js  index-b33fa508.css
app/src/main/cpp/: CMakeLists.txt  landmark.cpp  landmark.h  ndkcamera.cpp  ndkcamera.h  network_base.cpp  network_base.h  nnruntime.cpp
app/src/main/cpp/filter/: landmark_smoothing_filter.cpp  landmark_smoothing_filter.h  low_pass_filter.cpp  low_pass_filter.h  one_euro_filter.cpp  one_euro_filter.h  relative_velocity_filter.cpp  relative_velocity_filter.h  time_stamp.cpp  time_stamp.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
documentation/: installation.md
documentation/images/: logo.ai
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/.devcontainer/: devcontainer.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: Scoreboard.vue  WorkoutCard.vue  WorkoutView.vue  Workouts.vue
gradle/wrapper/: gradle-wrapper.properties
helpers/: obj_centering.py  stl_normaizer.py  stl_preprocessor.py  stl_to_obj.py
server/: db_connection.py  metrics.py  pyproject.toml  yogaserver.py
(+7 files in other folders)
